main.css
/* ... */
@media only screen and (min-width: 320px) {
  body {
    margin: 0;
    padding: 0;
    color: #FFFFFF;
    font-family: 'Trocchi', serif;
  }

  header {
    background-color: #565b63;
    padding-bottom: 40px;
  }

  ul {
    list-style: none;
    padding-left: 0;
  }

  li, a {
    text-decoration: none;
    color: #FFFFFF;
    text-transform: lowercase;
  }

  p, a {
    text-decoration: none;
  }

  .name {
    font-family: 'Rozha One', serif;
  }

  .hide-when-small {
    display: none;
  }

  .main-nav-link > a {
    font-size: 14px;
    color: #27ae60;
  }

  .name, h2, h3, .project-link > a {
    color: #FFFFFF;
    font-family: 'Rozha One', serif;
  }

  .nav-flex {
    display: flex;
    justify-content: space-around;
    padding-top: 20px;
    padding-bottom: 20px;
    background-color: black;
  }

  .name-headshot {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .name {
    padding-top: 50px;
    font-size: 42px;
    text-shadow: 3px 3px 3px #2e3033;
  }

  .name-headshot > img {
    margin-top: 20px;
    height: 25%;
    width: 25%;
  }

  .about {
    padding-top: 22px;
    padding-left: 24px;
    padding-right: 24px;
    padding-bottom: 18px;
    margin-left: 12px;
    margin-right: 12px;
    line-height: 290%;
    font-size: 14px;

  }

  .work {
    display: flex;
    flex-direction: column;
    align-items: center; 
    padding-top: 48px;
  
  }

  .work > h2, .project-description {
    color: #FFFFFF;
  }

  hr {
    height: 4px;
    width: 80%;
    background-color: #FFFFFF;
    margin-top: 10px;
    margin-bottom: 8px;
  }

  .hr-short {
    height: 2px;
    width: 80%;
    background-color: #FFFFFF;
  }

  h1, #about {
    color: #FFFFFF;
  }

  h2 {
    font-size: 36px;
  }

  h3, .project-description {
    color: #FFFFFF;
  }

  #work {
    background-color: #565b63;
    color: #FFFFFF;
    text-shadow: 2px 2px 2px #2e3033;
  }


  .project {
    background-color: #565b63;
    padding-left: 0px;
    padding-right: 0px;
    width: 100%;
    padding-top: 30px;
  }

  .project-one-title-img, .project-two-title-img, .project-three-title-img, .project-four-title-img {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .project-one-flex, .project-two-flex, .project-three-flex, .project-four-flex {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .project-description {
    color: #FFFFFF;
    font-size: 16px;
    padding-left: 25px;
    padding-right: 20px;
    line-height:175%;
    margin-top: 15px;
  }

  .project-one-flex > h3, .project-two-flex > h3 , .project-three-flex > h3 , .project-four-flex > h3 {
    font-size: 25px;
    text-shadow: 2px 2px 2px #2e3033;
  }

  .project-one-title-img > img, .project-two-title-img > img , .project-three-title-img > img , .project-four-title-img > img  {
    width: 40%;
    height: 40%;
    margin-bottom: 25px;
    box-shadow: 5px 5px 22px 3px #2e3033;
  }

  .project-links-ul {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .project-link-live {
    margin-right: 25px;
  }

  .project-link-github {
    margin-left: 25px;
  }

  .project-links {
    margin-top: 20px;
  }

  .project-link > a {
    color: #27ae60;
    font-size: 16px;
  }

  .project-stack {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin-top: 20px;
    margin-bottom: 20px;
  }

  .project-stack > img {
    height: 10%;
    width: 10%;
  }

  .node-logo {
    margin-top: 10px;
  }

  .contact-link > a {
    color: #27ae60;
  }

  .contact {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 36px;
    background-color: black;
  }

  .icon-stack {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .contact-links {
    width: 80%;
    padding-bottom: 20px;
  }

  .contact-info-flex {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-top: 10px;
  }

  .google-stack {
    margin-right: 20px;
  }

  .email-stack{
    margin-left: 20px;
  }

  .info-form-flex {
    display: flex;
    flex-direction: column;
    width: 75%;
    align-items: center;
  }

  .info-form-flex > label {
    margin-bottom: 1px;
  }

  .info-form-flex > input {
    margin-bottom: 30px;
    padding: 10px;
  }

  .info-form-flex > textarea {
    padding: 20px;
  }

  .send-message {
    margin-top: 15px;
    border-radius: 25%;
  }

}

@media only screen and (min-width: 480px) {
  .hide-when-small {
    display: none;
  }

  .main-nav-link > a {
    font-size: 16px;
  }

  .name {
    font-size: 60px;
  }

  .about {
    font-size: 17px;
  }

  .work > h2 {
    font-size: 40px;
  }

  .project-one-flex > h3, .project-two-flex > h3 , .project-three-flex > h3 , .project-four-flex > h3 {
    font-size: 30px;
  }

  .project-stack > img {
    width: 12%;
    height: 12%;
  }

  .node-logo {
    margin-top: 15px;
  }

  .project-description {
    font-size: 18px;
  }

  .project-link > a {
    font-size: 18px;
  }

  .contact {
    margin-bottom: 30px;
  }

  .contact > h2 {
    font-size: 46px;
  }

} 
/* ... */

